made reports pipeline including userSchema, swagger, services, controllers and routes
